# aarith

./: .clang-format  .clang-tidy  .gitignore  .gitlab-ci.yml  .gitlab-ci.yml_bkp  CMakeLists.txt  Readme.md  TargetWarnings.cmake  main.cpp  sonar-project.properties  sonar-project.properties.in
benchmarks/: CMakeLists.txt  FindMPFR.cmake  check_integer_operations.cpp  fau_adder_benchmark.cpp  generate.rb  generate_integer_benchmark.rb  generate_mpir_benchmark.rb  int8_bench.cpp  int_bench_funs.hpp  integer_benchmark.cpp  mpfr_benchmark.cpp  mpir_benchmark.cpp
docs/: CMakeLists.txt  Doxyfile.in  README.md  changelog.rst  conf.py  conf.py.in  index.rst  installation.rst  integers.rst  literature.rst  philosophy.rst  reference.rst  tutorial.rst  usecases.rst
docs/api/: float.rst  integer.rst  normfloat.rst  uinteger.rst  word_sequence.rst
docs/api/core/: bitcast.rst  stringnum.rst  traits.rst  word_array.rst
docs/api/float/: class.rst  comparisons.rst  operations.rst  utilities.rst
docs/approx/: anytime.rst  fau.rst
examples/: CMakeLists.txt  fau_adder.cpp  float_sci_str.cpp  invert.cpp  simple.cpp  sqrt.cpp
experiments/: CMakeLists.txt  all_floats.cpp  check_against_mpir.cpp  check_integer10_operations.cpp  check_integer11_operations.cpp  check_integer12_operations.cpp  check_integer14_operations.cpp  check_integer16_operations.cpp  check_integer24_operations.cpp  check_integer32_add.cpp  check_integer32_div.cpp  check_integer32_mod.cpp  check_integer32_mul.cpp  check_integer32_operations.cpp  check_integer32_sub.cpp  check_integer8_operations.cpp  check_uinteger32_add.cpp  check_uinteger32_div.cpp  check_uinteger32_karazuba.cpp  check_uinteger32_mod.cpp  check_uinteger32_mul.cpp  check_uinteger32_sub.cpp  dsp.cpp  eval_approximations.cpp  eval_fau_adder.cpp  gen_slurm.rb  heron_anytime.cpp  int_correctness_check_fun.hpp
experiments/dsp_packing/: DSP.hpp  DUT.hpp  dsp_packing.cpp  util.hpp
experiments/posit/: accuracy.cpp  baileys_numerical_nightmare.cpp  hello_world.cpp  iteration.cpp  itervalid.hpp  limits.cpp  mandelbrot.cpp  quadratic.cpp  support.hpp  thin_triangle.cpp  unit.cpp  validfib.cpp  validminusone.cpp  validplusone.cpp  validpmone.cpp
lib/catch2/: CMakeLists.txt
src/: CMakeLists.txt
src/aarith/: core.hpp  fixed_point.hpp  float.hpp  float_no_operators.hpp  integer.hpp  integer_no_operators.hpp  posit.hpp  posit_no_operators.hpp
src/operations/: exact_operations.hpp
src/types/: CMakeLists.txt  integer.hpp
tests/: CMakeLists.txt  FindMPIR.cmake  bit_operations-test.cpp  comparisons-test.cpp  container-test.cpp  exact_operations-float-test.cpp  exact_operations-test.cpp  gen_uinteger.hpp  sint-comparisons-test.cpp  sint-operations-test.cpp  sint-test.cpp  string_utils-test.cpp  test-signature-ranges.hpp  uint-anytime-test.cpp  uint-approx-test.cpp  uint-random-test.cpp  uint-test.cpp
tests/core/: bit_operations-test.cpp  functional-style-test.cpp  gen_word_array.hpp  number_utils-test.cpp  word_array-bitops-test.cpp  word_array-extraction-test.cpp  word_array-generation-test.cpp  word_array-utility-test.cpp  word_array_constructor.cpp
tests/correctness/: CMakeLists.txt  check_against_mpfr.cpp  check_against_mpir.cpp  check_float_operations.cpp  check_integer10_operations.cpp  check_integer12_operations.cpp  check_integer14_operations.cpp  check_integer16_operations.cpp  check_integer32_add.cpp  check_integer32_div.cpp  check_integer32_mod.cpp  check_integer32_mul.cpp  check_integer32_sub.cpp  check_integer8_operations.cpp  check_uinteger32_add.cpp  check_uinteger32_div.cpp  check_uinteger32_karazuba.cpp  check_uinteger32_mod.cpp  check_uinteger32_mul.cpp  check_uinteger32_sub.cpp  int_correctness_check_fun.hpp
tests/fixed_point/: fixed_point-comparison-test.cpp  fixed_point-generation-test.cpp  fixed_point-test.cpp  fixed_point_string_utils-test.cpp  gen_fixed_point.hpp  operations_test.cpp  string_utils-test.cpp
tests/float/: anytime_operations-float-test.cpp  classify-methods.cpp  exact_operations-float-test.cpp  float-random-generation-test.cpp  float-test.cpp  float_addition.cpp  float_assignment_operators.cpp  float_casts.cpp  float_comparisons.cpp  float_division.cpp  float_general_operations.cpp  float_mul.cpp  float_numeric_limits.cpp  float_subtraction.cpp  gen_float.hpp  integer_string_utils.cpp  nan_payload.cpp  sign_bit_operations.cpp  string_utils.cpp  total_ordering.cpp
tests/integer/: cast-operations.cpp  exact_operations-test.cpp  fau_adder.hpp  gen_integer.hpp  gen_uinteger.hpp  integer-casts.cpp  integer-comparisons-test.cpp  integer-operations-test.cpp  integer-random-generation-test.cpp  integer-shift-operations-test.cpp  integer-test.cpp  ranges_test.cpp  sint-operations-test.cpp  sint-test.cpp  string_utils-test.cpp  test_util.hpp  uint-anytime-test.cpp  uint-arithmetic-mpir-test.cpp  uint-comparisons-test.cpp  uint-extraction-test.cpp  uint-operations-test.cpp  uint-random-generation-test.cpp  uint-random-test.cpp  uint-test.cpp
tests/posit/: all_valids.hpp  any_irregular.hpp  binprod-test.cpp  bound-multiplication-test.cpp  for-each-posit.hpp  for_each_tile.hpp  for_each_valid.hpp  gen_bool.hpp  gen_posit.hpp  gen_tile.hpp  posit-integers.hpp  posit-iter_tools-test.cpp  posit-log-test.cpp  posit-pow-test.cpp  posit-rounding-test.cpp  posit-softposit-16-2-addition-test.cpp  posit-softposit-32-2-addition-test.cpp  posit-softposit-8-0-addition-test.cpp  posit-softposit-8-0-division-test.cpp  posit-softposit-8-0-multiplication-test.cpp  posit-softposit-8-0-subtraction-test.cpp  posit-softposit-8-2-addition-test.cpp  posit-softposit-8-2-division-test.cpp  posit-softposit-8-2-multiplication-test.cpp  posit-softposit-8-2-subtraction-test.cpp  posit-softposit-test.cpp  posit-softposit-testcases.hpp  posit-sqrt-test.cpp  posit-test-infra-test.cpp  posit-test.cpp  posit-universal-test.cpp  posit_casts-test.cpp  posit_operations-test.cpp  posit_operators-test.cpp  posit_parameters-test.cpp  posit_types-test.cpp  positparams-test.cpp  quire-arithmetic-test.cpp  quire-conversion-test.cpp  quire_conversion-test.cpp  (+14 more)
(+152 files in other folders)
